Created sign up, log in and log out using spring security authorization